# paddle2onnx

./: .pre-commit-config.yaml  README.md  convert.py  setup.py
core/: fluid_code.py  op_mapper.py  program.py
debug/: model_check.py
debug/reader/: image_reader.py
decoder/: dynamic2static.py
deploykit/cpp/demo/tensorrt_inference/: ppdet_infer.cpp  ppocr_infer.cpp
deploykit/cpp/demo/triton_inference/: CMakeLists.txt  ppdet_infer.cpp  ppocr_infer.cpp
deploykit/cpp/include/deploy/common/: blob.h  config.h
deploykit/cpp/include/deploy/engine/: tensorrt_engine.h  triton_engine.h
deploykit/cpp/include/deploy/engine/tensorrt/: buffers.h
deploykit/cpp/scripts/: triton_build.sh
deploykit/cpp/src/engine/: tensorrt_engine.cpp  triton_engine.cpp
deploykit/cpp/src/postprocess/: ppdet_post_proc.cpp
deploykit/cpp/src/preprocess/: ppdet_pre_proc.cpp
deploykit/python/: det.py
deploykit/python/demo/tensorrt/: det.py
deploykit/python/demo/triton/: det.py
deploykit/python/deploykit/engine/: __init__.py  triton_inference_engine.py  trt_inference_engine.py
deploykit/triton/: CMakeLists.txt
deploykit/triton/demo/triton_inference/: ppdet_infer.cpp
deploykit/triton/include/deploy/common/: blob.h  config.h  transforms.h
deploykit/triton/include/deploy/engine/: triton_engine.h
deploykit/triton/scripts/: build_triton.sh
deploykit/triton/src/common/: config.cpp  transforms.cpp
deploykit/triton/src/engine/: ppinference_engine.cpp  triton_engine.cpp
deploykit/triton/src/postprocess/: ppdet_post_proc.cpp
deploykit/triton/src/preprocess/: ppdet_pre_proc.cpp
onnx/opset11/: opset.py
op_mapper/paddle2onnx/: paddle_op_mapper.py
op_mapper/paddle2onnx/opset9/: opset.py
optimizer/: caffe_optimizer.py
paddle2onnx/: __init__.py  command.py  convert.py  convert_program.py  dygraph2onnx.py  export.py  paddle_onnx.py  program2onnx.py  utils.py
paddle2onnx/constant/: constant.py
paddle2onnx/converter/: configs.py  convert.py  utils.py
paddle2onnx/converter/opset10/: opset.py
paddle2onnx/converter/opset11/: opset.py
paddle2onnx/converter/opset11/paddle_custom_layer/: yolo_box.py
paddle2onnx/converter/opset9/: opset.py
paddle2onnx/converter/opset9/paddle_custom_layer/: box_coder.py
paddle2onnx/graph/: __init__.py  graph.py  graph_builder.py  graph_to_onnx.py  node.py  static_graph.py
paddle2onnx/graph/mir/: __init__.py  ifelse_pass.py
paddle2onnx/mapper/: __init__.py  graph_mapper.py
paddle2onnx/mapper/op_mapper/: activation.py  math.py  nn.py  tensor.py
paddle2onnx/mapper/op_mapper/detection/: box_coder.py  multiclass_nms.py  prior_box.py  yolo_box.py
paddle2onnx/mapper/op_mapper/sequence/: im2sequence.py
paddle2onnx/onnx/opset10/: opset.py
paddle2onnx/onnx_helper/: helper.py  mapping.py
paddle2onnx/onnx_opset/: activation.py  math.py  nn.py  tensor.py
paddle2onnx/onnx_opset/detection/: __init__.py  box_coder.py  multiclass_nms.py
paddle2onnx/onnx_opset/nlp/: im2sequence.py
paddle2onnx/op_mapper/: op_mapper.py  tensor.py
paddle2onnx/op_mapper/custom_paddle_op/: deformable_conv.py
paddle2onnx/op_mapper/onnx_opset/: __init__.py  activation.py  math.py  nn.py  tensor.py
paddle2onnx/op_mapper/onnx_opset/detection/: box_coder.py  multiclass_nms.py  yolo_box.py
paddle2onnx/optimizer/: __init__.py  onnx_optimizer.py  optimizer.py  tf_optimizer.py
paddle2onnx/static_graph/: graph.py
tests/: op_test.py  test_arg_max_op.py  test_batch_norm_op.py  test_bilinear_interp_op.py  test_norm_op.py  test_prior_box_op.py  test_sigmoid_op.py
